# cloud_storage

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  openapi.json  ruff.toml
src/auth/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
src/auth/config/: __init__.py  alembic.ini  cache_config.py  config.py  logging_config.py
src/auth/controller/: __init__.py  auth.py  auth_controller.py
src/auth/controllers/: __init__.py  database.py
src/auth/database/: __init__.py  base.py  crud.py  engine.py  models.py
src/auth/di/: di.py
src/auth/dto/: base.py  request.py  response.py
src/auth/enums/: __init__.py  enums.py
src/auth/errors/: __init__.py  errors.py
src/auth/exceptions/: __init__.py  exceptions.py
src/auth/factories/: auth_repository_factory.py  cache_factory.py  service_factory.py
src/auth/proto/: __init__.py  auth.proto  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py
src/auth/repository/: __init__.py  auth.py  auth_repository.py  models.py
src/auth/security/: __init__.py  security.py
src/auth/service/: __init__.py  auth.py  auth_service.py  service.py
src/auth/settings/: settings.py
src/auth/tests/: conftest.py  mocks.py  requirements.test.txt  test_auth_controller.py  test_auth_repository.py  test_auth_repository_models.py  test_auth_service.py  test_cache_config.py  test_controller.py  test_database_controller.py  test_database_crud.py  test_di.py  test_main.py  test_models.py  test_repository.py  test_repository_engine.py  test_repository_models.py  test_service.py  test_utils.py
src/auth/utils/: __init__.py  utils.py
src/file/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
src/file/adapters/: __init__.py  minio_adapter.py
src/file/config/: cache_config.py  config.py
src/file/controller/: __init__.py  file.py  file_controller.py
src/file/controllers/: __init__.py
src/file/database/: crud.py  engine.py
src/file/di/: di.py
src/file/dto/: base.py  request.py  response.py
src/file/exceptions/: __init__.py  exceptions.py
src/file/factories/: __init__.py  file_repository_factory.py  file_storage_factory.py  service_factory.py
src/file/proto/: __init__.py  file.proto  file_pb2.py  file_pb2.pyi  file_pb2_grpc.py
src/file/protocols/: __init__.py  file_repository.py  file_service.py  file_storage.py  s3_client.py
src/file/repository/: __init__.py  file.py  file_repository.py  models.py
src/file/service/: __init__.py  file.py  file_service.py  service.py
src/file/settings/: settings.py
src/file/storage/: __init__.py  engine.py  file.py  file_storage.py
src/file/tests/: conftest.py  mocks.py  test_cache_config.py  test_controller.py  test_database_controller.py  test_database_crud.py  test_database_engine.py  test_di.py  test_file_controller.py  test_file_repository.py  test_file_repository_models.py  test_file_service.py  test_file_storage.py  test_logging_config.py  test_main.py  test_models.py  test_repository.py  test_repository_models.py  test_service.py  test_storage.py  test_utils.py
src/file/utils/: __init__.py  cache_keys.py  utils.py
src/gateway/: Dockerfile  main.py  pyproject.toml  requirements.txt
src/gateway/adapters/: __init__.py  auth_grpc_adapter.py  base_adapter.py  file_grpc_adapter.py  mail_kafka_adapter.py
src/gateway/config/: __init__.py  config.py  cors_config.py  logging_config.py  openapi_config.py  prometheus_config.py
src/gateway/dto/: __init__.py  auth.py  auth_dto.py  base.py  base_dto.py  file.py  file_dto.py  mail.py  mail_dto.py
src/gateway/facades/: __init__.py  application_facade.py  auth_facade.py  file_facade.py
src/gateway/factories/: __init__.py  auth_factory.py  auth_service_factory.py  file_factory.py  file_service_factory.py  mail_factory.py  mail_service_factory.py  service_factory.py
src/gateway/interfaces/: __init__.py  auth_service.py  file_service.py  mail_service.py
src/gateway/proto/: __init__.py  auth.proto  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  file.proto  file_pb2.py  file_pb2.pyi  file_pb2_grpc.py  files.proto  files_pb2.py  files_pb2.pyi  files_pb2_grpc.py
src/gateway/protocols/: __init__.py  application_facade.py  auth_facade.py  auth_service.py  mail_service.py
src/gateway/routes/: __init__.py
src/gateway/schemas/: __init__.py  auth.py  auth_schemas.py  base.py  file_schemas.py  files.py
src/gateway/service/: __init__.py  auth.py  base.py  connect.py  file.py  mail.py
src/gateway/services/: __init__.py  auth.py  base.py  connect.py  file.py  files.py  mail.py
src/gateway/settings/: settings.py
src/gateway/tests/: conftest.py  mocks.py  test_auth_routes.py  test_auth_service.py  test_cors_config.py  test_di.py  test_file_routes.py  test_file_service.py  test_files_routes.py  test_files_service.py  test_logging_config.py  test_mail_service.py  test_main.py  test_openapi_config.py  test_prometheus_config.py  test_service_connectors.py  test_service_exceptions.py  test_utils.py
src/gateway/utils/: __init__.py  utils.py
src/gateway/validators/: __init__.py
src/mail/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
src/mail/adapters/: base_adapter.py  kafka_adapter.py  smtp_adapter.py
src/mail/config/: __init__.py  config.py  logging_config.py
src/mail/controller/: __init__.py  mail.py  mail_controller.py
src/mail/controllers/: __init__.py  mail.py
src/mail/di/: __init__.py  di.py
src/mail/dto/: __init__.py  base.py  converter.py  dto.py  factory.py
src/mail/enums/: __init__.py  enums.py
src/mail/facades/: application_facade.py  kafka_facade.py  smtp_facade.py
src/mail/factories/: __init__.py  kafka_consumer_factory.py  mail_factory.py  service_factory.py  smtp_client_factory.py
(+196 files in other folders)
