[project]
name = "auth"
version = "2.0.1"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.16.4",
    "asyncpg==0.30.0",
    "bcrypt==4.3.0",
    "cashews[redis]==7.4.1",
    "greenlet>=3.2.4",
    "grpc-accesslog==0.3.0",
    "grpcio==1.74.0",
    "grpcio-tools==1.74.0",
    "httpagentparser==1.9.5",
    "inject>=5.3.0",
    "jwskate==0.12.2",
    "picologging==0.9.3",
    "py-async-grpc-prometheus==0.2.0",
    "sqlalchemy==2.0.43",
    "uvicorn[standard]==0.35.0",
]

[dependency-groups]
test = [
    "coverage==7.10.3",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
]
