[project]
name = "file"
version = "1.5.2"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic==1.18.3",
    "asyncpg==0.31.0",
    "cashews[redis]==7.4.4",
    "greenlet>=3.3.1",
    "grpcio==1.76.0",
    "grpcio-tools==1.76.0",
    "py-async-grpc-prometheus==0.2.0",
    "sqlalchemy==2.0.46",
    "types-aioboto3[s3]>=15.5.0",
    "uvicorn[standard]==0.40.0",
]

[dependency-groups]
test = [
    "coverage==7.13.3",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
]
