[project]
name = "gateway"
version = "1.5.0"
requires-python = ">=3.12"
dependencies = [
    "aiokafka[lz4]==0.12.0",
    "grpcio==1.74.0",
    "grpcio-tools==1.74.0",
    "litestar[standard,prometheus]==2.19.0",
]

[dependency-groups]
test = [
    "coverage==7.10.3",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
]
