[project]
name = "mail"
version = "2.0.1"
requires-python = ">=3.12"
dependencies = [
    "aiokafka[lz4]==0.12.0",
    "aiosmtplib==3.0.2",
    "inject>=5.3.0",
    "picologging==0.9.3",
    "prometheus-client==0.21.1",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
test = [
    "coverage==7.6.11",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.0.0",
]
