[project]
name = "mail"
version = "1.4.0"
requires-python = ">=3.12"
dependencies = [
    "aiokafka[lz4]==0.12.0",
    "aiosmtplib==4.0.1",
    "inject>=5.3.0",
    "picologging==0.9.3",
    "prometheus-client==0.22.1",
    "uvicorn[standard]==0.35.0",
]

[dependency-groups]
test = [
    "coverage==7.10.3",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
]
